Demo 1: add-mods